renamed chapter file, while I decide final order. Also renamed biblio

--- a/Thesis.tex
+++ b/Thesis.tex
@@ -179,7 +179,7 @@ Do not forget about the people that has been by your side and supported you.
 \addcontentsline{toc}{chapter}{Introduction}
 \input{./Chapters/Introduction} %Introduction
 
-\input{./Chapters/Chapter1} % Splitting
+\input{./Chapters/RectificationChainOfIons} % Splitting
 \input{./Chapters/Conclusions} %Conclusions
 \addcontentsline{toc}{chapter}{Conclusions}
 
@@ -206,7 +206,7 @@ Do not forget about the people that has been by your side and supported you.
 %\bibliographystyle{h-physrev3} % formato PRA sin url ni issn ni hyperlinks
 \bibliographystyle{sofia} %modificado por mi a partir de utphys
 %\bibliographystyle{utphys} %formato arXiv con hyperlinks
-\bibliography{Bibliography}  % The references (bibliography) information are stored in the file named "Bibliography.bib"
+\bibliography{Bibliography_Thesis}  % The references (bibliography) information are stored in the file named "Bibliography_Thesis.bib"
 
 \end{document}  % The End
 %% ----------------------------------------------------------------
