Added material for chapter of rectification in the two masses toy model

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,125 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2020-10-28 15:14:15 +0100 
+%% Created for Mugagroup at 2020-10-30 19:51:42 +0100
 
 
-%% Saved with string encoding Unicode (UTF-8) 
+%% Saved with string encoding Unicode (UTF-8)
 
 
+
+@article{Alexander2020,
+	Author = {Alexander, Tristram J.},
+	Date-Added = {2020-10-30 19:51:36 +0100},
+	Date-Modified = {2020-10-30 19:51:36 +0100},
+	Doi = {10.1103/PhysRevE.101.062122},
+	Issue = {6},
+	Journal = {Phys. Rev. E},
+	Month = {Jun},
+	Numpages = {8},
+	Pages = {062122},
+	Publisher = {American Physical Society},
+	Title = {High-heat-flux rectification due to a localized thermal diode},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevE.101.062122},
+	Volume = {101},
+	Year = {2020},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevE.101.062122},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevE.101.062122}}
+
+@article{Casher1971,
+	Author = {Casher,A. and Lebowitz,J. L.},
+	Date-Added = {2020-10-30 19:51:36 +0100},
+	Date-Modified = {2020-10-30 19:51:36 +0100},
+	Doi = {10.1063/1.1665794},
+	Eprint = {https://doi.org/10.1063/1.1665794},
+	Journal = {Journal of Mathematical Physics},
+	Number = {8},
+	Pages = {1701-1711},
+	Title = {Heat Flow in Regular and Disordered Harmonic Chains},
+	Url = {https://doi.org/10.1063/1.1665794},
+	Volume = {12},
+	Year = {1971},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.1665794}}
+
+@article{Chu1985,
+	Author = {Chu, Steven and Hollberg, L. and Bjorkholm, J. E. and Cable, Alex and Ashkin, A.},
+	Date-Added = {2020-10-30 19:51:36 +0100},
+	Date-Modified = {2020-10-30 19:51:36 +0100},
+	Doi = {10.1103/PhysRevLett.55.48},
+	Issue = {1},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Jul},
+	Numpages = {0},
+	Pages = {48--51},
+	Publisher = {American Physical Society},
+	Title = {Three-dimensional viscous confinement and cooling of atoms by resonance radiation pressure},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.55.48},
+	Volume = {55},
+	Year = {1985},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.55.48},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.55.48}}
+
+@article{Leibfried2003,
+	Author = {Leibfried, D. and Blatt, R. and Monroe, C. and Wineland, D.},
+	Date-Added = {2020-10-30 19:51:36 +0100},
+	Date-Modified = {2020-10-30 19:51:36 +0100},
+	Doi = {10.1103/RevModPhys.75.281},
+	Issue = {1},
+	Journal = {Rev. Mod. Phys.},
+	Month = {Mar},
+	Numpages = {0},
+	Pages = {281--324},
+	Publisher = {American Physical Society},
+	Title = {Quantum dynamics of single trapped ions},
+	Url = {https://link.aps.org/doi/10.1103/RevModPhys.75.281},
+	Volume = {75},
+	Year = {2003},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/RevModPhys.75.281},
+	Bdsk-Url-2 = {https://doi.org/10.1103/RevModPhys.75.281}}
+
+@book{Metcalf1999,
+	Address = {New York},
+	Author = {Metcalf, H.J. and Van der Straten, P.},
+	Date-Added = {2020-10-30 19:51:36 +0100},
+	Date-Modified = {2020-10-30 19:51:36 +0100},
+	Isbn = {9780387987477},
+	Lccn = {98055408},
+	Publisher = {Springer-Verlag},
+	Series = {Graduate texts in contemporary physics},
+	Title = {Laser Cooling and Trapping},
+	Year = {1999}}
+
+@article{Rieder1967,
+	Author = {Rieder,Z. and Lebowitz,J. L. and Lieb,E.},
+	Date-Added = {2020-10-30 19:51:36 +0100},
+	Date-Modified = {2020-10-30 19:51:36 +0100},
+	Doi = {10.1063/1.1705319},
+	Journal = {Journal of Mathematical Physics},
+	Number = {5},
+	Pages = {1073-1078},
+	Title = {Properties of a Harmonic Crystal in a Stationary Nonequilibrium State},
+	Url = {https://doi.org/10.1063/1.1705319},
+	Volume = {8},
+	Year = {1967},
+	Bdsk-Url-1 = {https://doi.org/10.1063/1.1705319}}
+
+@article{Simon2019,
+	Author = {Sim\'on, M. A. and Mart\'{\i}nez-Garaot, S. and Pons, M. and Muga, J. G.},
+	Date-Added = {2020-10-30 19:51:36 +0100},
+	Date-Modified = {2020-10-30 19:51:36 +0100},
+	Doi = {10.1103/PhysRevE.100.032109},
+	Issue = {3},
+	Journal = {Phys. Rev. E},
+	Month = {Sep},
+	Numpages = {9},
+	Pages = {032109},
+	Publisher = {American Physical Society},
+	Title = {Asymmetric heat transport in ion crystals},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevE.100.032109},
+	Volume = {100},
+	Year = {2019},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevE.100.032109},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevE.100.032109}}
 
 @article{Bezanson2012,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
