--- a/Thesis.tex
+++ b/Thesis.tex
@@ -179,7 +179,9 @@ Do not forget about the people that has been by your side and supported you.
 \addcontentsline{toc}{chapter}{Introduction}
 \input{./Chapters/Introduction} %Introduction
 
-\input{./Chapters/RectificationChainOfIons} % Splitting
+\input{./Chapters/RectificationChainOfIons} %Rectification chain of Ions
+\input{./Chapters/ChapterToyModel} %Rectification Toy Model
+
 \input{./Chapters/Conclusions} %Conclusions
 \addcontentsline{toc}{chapter}{Conclusions}
 
