added updated list of publications

--- a/Publications.tex
+++ b/Publications.tex
@@ -2,19 +2,64 @@
 \label{Publications}
 \lhead{\emph{List of publications}} % Write in your own chapter title to set the page header
 \hspace{-0.5 cm}{{\large\bf \rm I)}} {\bf The results of this Thesis are based on the following articles}
-\section*{{\large\bf Published  Articles}}
+\section*{Published Articles}
 
 \begin{enumerate}
 
-\item E. Torrontegui, S. Mart\'inez-Garaot, A. Ruschhaupt, and J. G. Muga
-\\{\it Shortcuts to adiabaticity: Fast-forward approach}\\ \href{http://journals.aps.org/pra/abstract/10.1103/PhysRevA.86.013601}{Phys. Rev. A {\bf 86}, 013601 (2012).}
+  \item M. Pons, Y. Y. Cui, A. Ruschhaupt, {\bf M. A. Sim\'{o}n} and J. G. Muga\\
+  {\it Local rectification of heat flux}\\
+  \href{https://doi.org/10.1209/0295-5075/119/64001}{EPL {\bf 119}, 64001 (2017).}
+
+  \item A. Ruschhaupt, T. Dowdall, {\bf M. A. Sim\'{o}n} and J. G. Muga\\
+  {\it Asymmetric scattering by non-Hermitian potentials}\\
+  \href{https://doi.org/10.1209/0295-5075/120/20001}{EPL {\bf 120}, 20001 (2017).}
+
+  \item {\bf M. A. Sim\'{o}n}, A. Buend\'{i}a and J. G. Muga\\
+  {\it Symmetries and Invariants for Non-Hermitian Hamiltonians}\\
+  \href{https://doi.org/10.3390/math6070111}{Mathematics {\bf 6}, 111 (2018).}
+
+  \item {\bf M. A. Sim\'{o}n}, A. Buend\'{i}a, A. Kiely, A. Mostafazadeh and J. G. Muga\\
+  {\it $S$-matrix pole symmetries for non-Hermitian scattering Hamiltonians}\\
+  \href{https://doi.org/10.1103/PhysRevA.99.052110}{Phys. Rev. A {\bf 99}, 052110 (2019).}
+
+  \item {\bf M. A. Sim\'{o}n}, S. Mart\'{i}nez-Garaot, M. Pons and J. G. Muga\\
+  {\it Asymmetric heat transport in ion crystals}\\
+  \href{https://doi.org/10.1103/PhysRevE.100.032109}{Phys. Rev. E {\bf 100}, 032109 (2019).}
+
+  \item A. Alaña, S. Mart\'{i}nez-Garaot, {\bf M. A. Sim\'{o}n} and J. G. Muga\\
+  {\it Symmetries of (${N \times N}$ ) non-Hermitian Hamiltonian matrices}\\
+  \href{https://doi.org/10.1088/1751-8121/ab7781}{J. Phys. A: Math. Theor. {\bf 53}, 135304 (2020).}
+
+\end{enumerate}
+
+\section*{Preprints}
+
+\begin{enumerate}
+
+  \item A. Ruschhaupt, A. Kiely, {\bf M. A. Sim\'{o}n} and J. G. Muga\\
+  {\it Quantum-optical implementation of non-Hermitian potentials for asymmetric scattering}\\
+  \href{https://arxiv.org/abs/2008.01702}{arXiv:2008.01702 [quant-ph] (2020)}\\
+  (\href{https://journals.aps.org/pra/accepted/2f07eYb5Ibe1ea6603ef59232d2f3864c12b1a62d}{Accepted for publication in Phys. Rev. A})
+
+  \item {\bf M. A. Sim\'{o}n}, A. Alaña, M. Pons, A. Ruiz-Garc\'{i}a and J. G. Muga\\
+  {\it Heat rectification with a minimal model of two harmonic oscillators}\\
+  \href{https://arxiv.org/abs/2010.10432}{arXiv:2010.10432 [cond-mat.stat-mech] (2020)}
+
+\end{enumerate}
 
 \vspace{1.25 cm}
 
 \hspace{-0.65  cm}{{\large\bf \rm II)}} {\bf Other articles produced during the Thesis period}
-\section*{{\large\bf Published  Articles not included in this Thesis}}
+\section*{Published  Articles not included in this Thesis}
 
-\item S. Ib\' a\~ nez, S. Mart\' inez-Garaot, X. Chen, E. Torrontegui, and J. G. Muga
-\\{\it Shortcuts to adiabaticity for non-Hermitian systems}\\ \href{http://journals.aps.org/pra/abstract/10.1103/PhysRevA.84.023415}{Phys. Rev. A {\bf 84}, 023415 (2011).}
+\begin{enumerate}
+
+  \item M. Palmero, {\bf M. A. Sim\'{o}n} and D. Poletti\\
+  {\it Towards Generation of Cat States in Trapped Ions Set-Ups via FAQUAD Protocols and Dynamical Decoupling}\\
+  \href{https://doi.org/10.3390/e21121207}{Entropy {\bf 21}, 1207 (2019)}
+
+  \item {\bf M. A. Sim\'{o}n}, M. Palmero, S. Mart\'{i}nez-Garaot and J. G. Muga\\
+  {\it Trapped-ion Fock-state preparation by potential deformation}\\
+  \href{https://doi.org/10.1103/PhysRevResearch.2.023372}{Phys. Rev. Research {\bf 2}, 023372 (2020)}
 
 \end{enumerate}
