Added Material corresponding to rectification EPL paper

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,219 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2020-10-30 19:51:42 +0100
+%% Created for Mugagroup at 2020-11-02 16:48:35 +0100 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Hu2006a,
+	Author = {Hu, B. and He, D. and Yang, L. and Zhang, Y.},
+	Date-Added = {2020-11-02 16:39:24 +0100},
+	Date-Modified = {2020-11-02 16:39:24 +0100},
+	Doi = {10.1103/PhysRevE.74.060201},
+	Issue = {6},
+	Journal = {Phys. Rev. E},
+	Month = {Dec},
+	Numpages = {4},
+	Pages = {060201},
+	Publisher = {American Physical Society},
+	Title = {Thermal rectifying effect in macroscopic size},
+	Volume = {74},
+	Year = {2006},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevE.74.060201}}
+
+@article{Bakr2009,
+	Author = {W. S. Bakr and J. I. Gillen and A. Peng and S. F\"{o}lling and M. Greiner},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Journal = {Nature},
+	Pages = {74},
+	Title = {A quantum gas microscope for detecting single atoms in a Hubbard-regime optical lattice},
+	Volume = {462},
+	Year = {2009}}
+
+@article{Bloch2005,
+	Author = {I. Bloch},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Journal = {Nature Physics},
+	Pages = {23},
+	Title = {Ultracold Quantum Gases in Optical Lattices},
+	Volume = {1},
+	Year = {2005}}
+
+@article{Casati1984,
+	Author = {Casati, Giulio and Ford, Joseph and Vivaldi, Franco and Visscher, William M.},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1103/PhysRevLett.52.1861},
+	Issue = {21},
+	Journal = {Phys. Rev. Lett.},
+	Month = {May},
+	Numpages = {0},
+	Pages = {1861--1864},
+	Publisher = {American Physical Society},
+	Title = {One-Dimensional Classical Many-Body System Having a Normal Thermal Conductivity},
+	Volume = {52},
+	Year = {1984},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.52.1861}}
+
+@inbook{Gollub2014,
+	Author = {Gollub, C. and Hoff, P. Von Den and Kowalewski, M. and Troppmann, U. and Vivie-Riedle, R. De},
+	Booktitle = {Quantum Information and Computation for Chemistry},
+	Chapter = {13},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1002/9781118742631.ch13},
+	Isbn = {9781118742631},
+	Keywords = {quantum dynamics, quantum information processing, scalable information processing, vibrational energy transfer},
+	Pages = {371--402},
+	Publisher = {John Wiley \& Sons, Inc.},
+	Title = {Vibrational Energy Transfer Through Molecular Chains: An Approach Toward Scalable Information Processing},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1002/9781118742631.ch13}}
+
+@article{Hu1998,
+	Author = {Hu, Bambi and Li, Baowen and Zhao, Hong},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1103/PhysRevE.57.2992},
+	Issue = {3},
+	Journal = {Phys. Rev. E},
+	Month = {Mar},
+	Numpages = {0},
+	Pages = {2992--2995},
+	Publisher = {American Physical Society},
+	Title = {Heat conduction in one-dimensional chains},
+	Volume = {57},
+	Year = {1998},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevE.57.2992}}
+
+@article{Lepri1997,
+	Author = {Lepri, Stefano and Livi, Roberto and Politi, Antonio},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1103/PhysRevLett.78.1896},
+	Issue = {10},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Mar},
+	Numpages = {0},
+	Pages = {1896--1899},
+	Publisher = {American Physical Society},
+	Title = {Heat Conduction in Chains of Nonlinear Oscillators},
+	Volume = {78},
+	Year = {1997},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.78.1896}}
+
+@article{Martyna1992,
+	Author = {Glenn J. Martyna and Michael L. Klein and Mark Tuckerman},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1063/1.463940},
+	Eprint = {http://dx.doi.org/10.1063/1.463940},
+	Journal = {The Journal of Chemical Physics},
+	Number = {4},
+	Pages = {2635-2643},
+	Title = {Nos{\'e}--Hoover chains: The canonical ensemble via continuous dynamics},
+	Volume = {97},
+	Year = {1992},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1063/1.463940}}
+
+@article{Raizen2005,
+	Author = {Raizen, M. G. and Dudarev, A. M. and Niu, Qian and Fisch, N. J.},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1103/PhysRevLett.94.053003},
+	Issue = {5},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Feb},
+	Numpages = {4},
+	Pages = {053003},
+	Publisher = {American Physical Society},
+	Title = {Compression of Atomic Phase Space Using an Asymmetric One-Way Barrier},
+	Volume = {94},
+	Year = {2005},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevLett.94.053003}}
+
+@article{Ruschhaupt2004,
+	Author = {Ruschhaupt, A. and Muga, J. G.},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1103/PhysRevA.70.061604},
+	Issue = {6},
+	Journal = {Phys. Rev. A},
+	Month = {Dec},
+	Numpages = {4},
+	Pages = {061604},
+	Publisher = {American Physical Society},
+	Title = {Atom diode: A laser device for a unidirectional transmission of ground-state atoms},
+	Volume = {70},
+	Year = {2004},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1103/PhysRevA.70.061604}}
+
+@article{Ruschhaupt2006,
+	Author = {A Ruschhaupt and J G Muga and M G Raizen},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Journal = {Journal of Physics B: Atomic, Molecular and Optical Physics},
+	Number = {6},
+	Pages = {L133},
+	Title = {Improvement by laser quenching of an 'atom diode': a one-way barrier for ultra-cold atoms},
+	Volume = {39},
+	Year = {2006}}
+
+@article{Skordos1992,
+	Author = {P. A. Skordos and W. H. Zurek},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1119/1.17007},
+	Eprint = {http://dx.doi.org/10.1119/1.17007},
+	Journal = {American Journal of Physics},
+	Number = {10},
+	Pages = {876-882},
+	Title = {Maxwell's demon, rectifiers, and the second law: Computer simulation of Smoluchowski's trapdoor},
+	Volume = {60},
+	Year = {1992},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1119/1.17007}}
+
+@article{Wang2014,
+	Author = {Wang, Yan and Vallabhaneni, Ajit and Hu, Jiuning and Qiu, Bo and Chen, Yong P. and Ruan, Xiulin},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1021/nl403773f},
+	Eprint = {http://dx.doi.org/10.1021/nl403773f},
+	Journal = {Nano Letters},
+	Number = {2},
+	Pages = {592-596},
+	Title = {Phonon Lateral Confinement Enables Thermal Rectification in Asymmetric Single-Material Nanostructures},
+	Volume = {14},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1021/nl403773f}}
+
+@article{Wang2015,
+	Author = {Lei Wang and Zhiyuan Wu and Lubo Xu},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Journal = {Phys. Rev. E},
+	Pages = {062130},
+	Title = {Super heat diffusion in one-dimensional momentum-conserving nonlinear lattices},
+	Volume = {91},
+	Year = {2015}}
+
+@article{Wang2017,
+	Author = {H. Wang and S. Hu and K. Takahashi and X. Zhang and H. Takamatsu and J. Chen},
+	Date-Added = {2020-11-02 16:35:11 +0100},
+	Date-Modified = {2020-11-02 16:35:11 +0100},
+	Doi = {10.1038/ncomms15843},
+	Journal = {Nature Comm.},
+	Month = {June},
+	Pages = {15483},
+	Title = {Suspended Monolayer Graphene},
+	Volume = {8},
+	Year = {2016},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/ncomms15843}}
 
 @article{Alexander2020,
 	Author = {Alexander, Tristram J.},
@@ -623,10 +830,10 @@
 	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.101.267203},
 	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.101.267203}}
 
-@article{Casati2006,
+@article{Li2006,
 	Author = {Li,Baowen and Wang,Lei and Casati,Giulio},
 	Date-Added = {2019-03-21 11:13:27 +0100},
-	Date-Modified = {2019-05-24 09:40:32 +0200},
+	Date-Modified = {2020-11-02 16:30:12 +0100},
 	Doi = {10.1063/1.2191730},
 	Journal = {Applied Physics Letters},
 	Number = {14},
